versions/26.2/translated/ru_ru/develop/items/first-item.md
---
title: Создание вашего первого предмета
description: Узнайте, как зарегистрировать предмет, добавить текстуру, модель и название.
authors:
  - cassiancc
  - dicedpixels
  - Earthcomputer
  - IMB11
  - RaphProductions
---

На этой странице вы познакомитесь с некоторыми ключевыми концепциями, касающимися предметов, а также с тем, как их регистрировать, задавать текстуры, моделировать и давать названия.

Если вы не знали, то все в Майнкрафте хранится в реестрах, и предметы не стали исключением.

## Подготовка класса ID ваших предметов {#preparing-your-item-ids-classes}

Начнём с создания класса, который будет сохранять название предмета в `Resource Key`. `Resource Key` будет содержать название мода, предмета и в какой реестр предмет должен быть занесён.

Реализуем вспомогательный метод, который будет создавать `Resource Key`, основываясь на названии предмета; так же он будет заполнять остальные поля, такие как реестр предмета и ID мода.

Такая ссылка на предмет используется для [генерации тегов](../data-generation/tags).

Вы можете поместить этот метод в класс `ModItemsIds` (или как вы его назовете).

::: tip

Mojang уже сделали это со своими предметами! Загляните в класс `ItemIds` для вдохновения.

:::

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItemIds.java#mod_item_ids_class

## Подготовка класса вашего предмета {#preparing-your-items-class}

Чтобы упростить регистрацию предметов, вы можете создать метод, принимающий `Resource Key`, некоторые настройки предмета и фабрику для создания экземпляров `Item`.

Этот метод будет создавать и регистрировать предмет в соответствующий реестр.

Вы можете поместить этот метод в класс под именем `ModItems` (или как вы его назовете).

Mojang уже сделали это со своими предметами! Загляните в класс `Items` для вдохновения.

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItems.java#mod_items_class

## Регистрация предмета {#registering-an-item}

Теперь вы можете регистрировать предметы, используя данный метод.

Метод регистрации принимает экземпляр класса 'Item.Properties' как параметр. Этот класс позволяет вам настраивать свойства предмета через различные методы.

::: tip

Если вы хотите изменить максимальный размер стака вашего предмета, вы можете использовать метод stacksTo в классе Item.Properties.

Это не сработает, если вы пометили предмет как повреждаемый, потому что размер стака для повреждаемых предметов всегда равен 1, для предотвращения эксплойтов дублирования.

:::

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItemIds.java#suspicious_substance

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItems.java#suspicious_substance

'Item::new' сообщает функции регистрации о создании экземпляра 'Item', вызывая конструктор 'Item' ('new Item(...)'), принимающий `Item.Properties` в качестве параметра.

Однако, если вы сейчас попробуете запустить модифицированный клиент, вы увидите, что наш предмет не существует в игре! Это происходит, потому что вы не инициализировали класс статически.

Чтобы сделать это, вы можете добавить публичный статический метод 'initialize' вашему классу и вызывать его в [mod's initializer](../getting-started/project-structure#entrypoints) вашего класса. На данный момент этот метод может оставаться пустым.

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItems.java#initialize

<<< @/reference/26.2/src/main/java/com/example/docs/item/ExampleModItems.java#initialize

Вызов метода у класса статически инициализирует его, если он не был загружен ранее. Это означает, что вычисляются все поля static. Для этого и существует фиктивный метод `initialize`.

## Добавление предмета во вкладку Творческого режима {#adding-the-item-to-a-creative-tab}

::: info

Если вы хотите добавить предмет в пользовательскую вкладку творческого режима, посетите страницу ['Пользовательские вкладки Творческого режима'](./custom-creative-tabs) для получения дополнительной информации.

:::

Для примера, мы добавим этот предмет во вкладку ингредиенты 'CreativeModeTab', вам необходимо использовать события вкладок Творческого режима Fabric API, а именно `CreativeModeTabEvents.modifyOutputEvent`.

Это может быть сделано в методе 'initialize' класса ваших предметов.

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItems.java#add_to_creative_tab

Запустив игру, вы можете увидеть, что наш предмет зарегистрирован и находится во вкладке "ингредиенты".

![Предметы в категории "ингредиенты"](/assets/develop/items/first_item_0.png)

Однако, не хватает следующего:

- Модели предмета
- Текстуры
- Перевода (названия)

## Наименование предмета {#naming-the-item}

Сейчас у предмета нет перевода, поэтому вам необходимо его добавить. Ключ перевода уже был предоставлен Minecraft: `item.example-mod.suspicious_substance`.

Создайте новый JSON-файл по пути: `src/main/resources/assets/example-mod/lang/en_us.json` и поместите ключ перевода и его значение.

```json
{
  "item.example-mod.suspicious_substance": "Suspicious Substance"
}
```

Вы можете перезапустить игру, либо собрать мод и нажать  <kbd>F3</kbd>+<kbd>T</kbd>, чтобы подтвердить изменения.

## Добавление клиентского предмета, текстуры и модели {#adding-a-client-item-texture-and-model}

Чтобы ваш предмет выглядел правильно, необходимы:

- [Текстура предмета](https://minecraft.wiki/w/Textures#Items)
- [Модель предмета](https://minecraft.wiki/w/Model#Item_models)
- [Клиентский предмет](https://minecraft.wiki/w/Items_model_definition)

### Добавление текстуры {#adding-a-texture}

::: info

Дополнительную информацию по этой теме см. на странице [Модели предметов](./item-models).

:::

Чтобы задать вашему предмету текстуру и модель, просто создайте изображение текстуры с расширением 16х16 для вашего предмета и сохраните в папке `assets/example-mod/textures/item`. Назовите файл текстуры так же, как идентификатор предмета, но с расширением `.png`.

Для примера, вы можете использовать эту текстуру для
`suspicious_substance.png`

<0>Текстура</0>

### Добавление модели {#adding-a-model}

При перезапуске/перезагрузке игры вы должны увидеть, что у предмета по-прежнему нет текстуры, это потому, что вам нужно добавить модель, использующую эту текстуру.

Вы создадите простую модель item/generated, которой нужна только входная текстура.

Создайте JSON модель в папке `assets/example-mod/models/item`, с тем же именем, что и у предмета: `suspicious_substance.json`

<<< @/reference/26.2/src/main/generated/assets/example-mod/models/item/suspicious_substance.json

#### Разбор JSON модели {#breaking-down-the-model-json}

- `parent`: Это родительская модель, от которой будет унаследована данная модель. В данном случае это модель `item/generated`.
- `textures`: Здесь вы определяете текстуры для модели. Ключ `layer0` — это текстура, которую будет использовать модель.

Большинство элементов будут использовать модель `item/generated` в качестве родительской, поскольку это простая модель, которая просто отображает текстуру.

Существуют и другие варианты, например item/handheld, который используется для предметов, «удерживаемых» в руке игрока, — таких, как инструменты.

### Создание клиентского предмета {#creating-the-client-item}

Minecraft автоматические не узнает, где можно найти файлы модели вашего предмета, нам необходимо предоставить клиентский предмет.

Создайте JSON клиентского предмета по пути `assets/example-mod/items` так же, как идентификатор предмета: `suspicious_substance.json`.

<<< @/reference/26.2/src/main/generated/assets/example-mod/items/suspicious_substance.json

#### Разбор JSON клиентского предмета {#breaking-down-the-client-item-json}

- `model`: это свойство, содержащее ссылку на нашу модель.
  - `type`: это тип нашей модели. Для большинства предметов это должно быть `minecraft:model`
  - `model`: это идентификатор модели. Он должен иметь та

Теперь ваш предмет в игре должен выглядеть так:

![Предмет с правильной моделью](/assets/develop/items/first_item_2.png)

## Сделать предмет компостируемым или топливом {#making-the-item-compostable-or-a-fuel}

Fabric API предоставляет различные реестры, которые можно использовать для добавления дополнительных свойств вашему предмету.

Например, если вы хотите сделать свой предмет компостируемым, то вы можете использовать `CompostableRegistry`:

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItems.java#compostable_item

Также если вы хотите сделать ваш предмет топливом, вы можете использовать класс `FuelRegistry`:

<<< @/reference/26.2/src/main/java/com/example/docs/item/ModItems.java#fuel_item

## Добавление рецепта создания {#adding-a-basic-crafting-recipe}

<!-- In the future, an entire section on recipes and recipe types should be created. For now, this suffices. -->

Если вы хотите добавить рецепт создания вашего предмета, вам понадобиться разместить JSON-файл рецепта в папку `data/example-mod/recipe`.

Чтобы узнать больше о формате рецептов, ознакомьтесь со следующими ресурсами:

- [Генератор JSON рецептов](https://crafting.thedestruc7i0n.ca/)
- [Minecraft Wiki - Recipe JSON](https://minecraft.wiki/w/Recipe#JSON_Format)

## Пользовательские подсказки {#custom-tooltips}

Если вы хотите добавить пользовательскую подсказку вашему предмету, вам необходимо создать класс, расширяющий класс 'Item' и переопределить метод `appendHoverText`. Обратите внимание, что этот метод является устаревшим, поскольку Mojang стремится к тому, чтобы поведение предметов обрабатывалось полностью через компоненты, а не через сами предметы. Дополнительные сведения см. в разделе [Пользовательские компоненты данных](./custom-data-components).

::: info

В данном примере используется класс 'LightningStick', созданный на странице  [Взаимодействия пользовательских элементов](./custom-item-interactions).

:::

<<< @/reference/26.2/src/main/java/com/example/docs/item/custom/LightningStick.java#custom_tooltip

Каждый вызов `accept()` добавляет одну строку в подсказку.

![Отображение подсказки](/assets/develop/items/first_item_3.png)
